# ChangeLog for media-tv/gentoo-vdr-scripts
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.139 2015/03/30 13:23:58 hd_brummy Exp $

  30 Mar 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  -gentoo-vdr-scripts-2.6.ebuild, gentoo-vdr-scripts-2.7.ebuild,
  -gentoo-vdr-scripts-2.7.1.ebuild:
  stable x86, amd64; cleanup old

*gentoo-vdr-scripts-2.7.2 (24 Mar 2015)

  24 Mar 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  +gentoo-vdr-scripts-2.7.2.ebuild:
  minor fix, reported by tinitus@ vdr-portal.de

*gentoo-vdr-scripts-2.7.1 (02 Mar 2015)

  02 Mar 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  +gentoo-vdr-scripts-2.7.1.ebuild:
  bump; update license info, call include on later lines

*gentoo-vdr-scripts-2.7 (18 Feb 2015)

  18 Feb 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  +gentoo-vdr-scripts-2.7.ebuild:
  support >=vdr-2.1.10, fix some deprecated warnings in new vdr major release

  06 Feb 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  gentoo-vdr-scripts-2.6.ebuild:
  typo; using elog instead of einfo now

*gentoo-vdr-scripts-2.6 (06 Feb 2015)

  06 Feb 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  +gentoo-vdr-scripts-2.6.ebuild:
  bump, init script vdr-x11 added

  03 Feb 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  gentoo-vdr-scripts-2.5.ebuild:
  stable amd64 x86

  03 Jan 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  -gentoo-vdr-scripts-0.5.3.ebuild, -gentoo-vdr-scripts-2.5_rc4.ebuild:
  clean up old

  01 Jan 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  gentoo-vdr-scripts-2.5.ebuild:
  better detailed info for systemd handling

*gentoo-vdr-scripts-2.5 (01 Jan 2015)

  01 Jan 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
  +gentoo-vdr-scripts-2.5.ebuild:
  bump; fixed locale handling for systemd, thx to D.Ferdinand wrt bug 530690;
  fixed misusing 'need net', wrt bug 530828; fixed locale handling openrc

*gentoo-vdr-scripts-2.5_rc4 (22 Oct 2014)
