@@ -4,18 +4,20 @@ Hash: SHA256
 DIST gentoo-vdr-scripts-2.0.0.tar.bz2 37438 SHA256 6c2025714546a25632c5b8103b3fa4b7ca6adf963189800c91e99cb23f7b2a79 SHA512 0214b390e1e4fe4f65ceb940a1d092f88fe5263eda3c97ebfa7d2925a772165af3a3c62bfc964e577e374ce723aefccb29082f8219fda918ad17f966ad8ad392 WHIRLPOOL a3de83d95a51622de997d8231b973d6899a2fa21324492e11eb4001ad3c15dee5c6e65f20ee44fd43ebe2974b2b1acf623956d2d44b955bfee799d1a696ace65
 DIST gentoo-vdr-scripts-2.5.tar.bz2 39893 SHA256 39a3c5d1cf30f1b07a6218b2154835994bbf9d65358e916260bad970a6ca6432 SHA512 bed3db4e3c4f8195d5715d274a32485d067fa2e539ace417c2d73bac1294d46736754be589d5e18b77e0baa1b4d9cd7df5ff8a13db2850d92d2eb992f9b131a6 WHIRLPOOL 5a7626484784ad49624df92daab0997368f885d4d5f6ad732082c2a77c840f6e23f345cf35816890d43493c57fa70c90eb9a4ab785a8d4ead81f6779714138b9
 DIST gentoo-vdr-scripts-2.7.2.tar.bz2 48584 SHA256 65de19d3738442a08cdb603ab0e0116e96bbcd8d58b9c9b3f2942e0bcb5365cb SHA512 cb0297c7e78e4c110097d1c08a5f6642d8194d01dd47308f7a41c6d76f7b1675cc612d47a7725eb4f47a393086b034ca09703af0867ae02a36af4be12701f861 WHIRLPOOL 7fe4e106512cca4e26a778320cadf93976897622dac2fd2cf7e21e20e44da27caa69da71f7a779747bc05872e6b90ee7440a7c8fbd2165e6c6a2544804c71da1
+DIST gentoo-vdr-scripts-2.7.3.tar.bz2 49156 SHA256 a8fb04ca737080dd4fa4d300243d833f835885c0b4c9ca3f1808997713a626ec SHA512 9d00acaf77bbbf52f4a4d4b8284d94b9d191c354de52ea6f7bba0751be661feec4915cca20be3d24a0471efe4b3f24c5dcc025e3e8b0cc6b2c37f8843b91a520 WHIRLPOOL bd30b36284754d4e5c135c381e4114354b1292f4203d0367622c650252d8ecbcaabe58bc40b4d0ad26b54553f5ee0ff5e2e32e13abdd088bd26b0b41a97ee10c
 DIST gentoo-vdr-scripts-2.7.tar.bz2 46618 SHA256 40f6e50e684b4dde9c026887119e80c9680212bfe41854c6526cc1346c0ae2a2 SHA512 95db4d2632d07cc86394fbc2898050d47175f01cc60b61230ba5363c770ba6ad5c5935987ac6a1131bc575887633ed6c8f6242f7de225fc875d0871123665bc5 WHIRLPOOL 889e2379fa9df6ae9992f6569779d4f485488e84c9c1065c43717ae07d15c601ce9a731e612e6bfaaf7df55d5eb4c7901f16bbf0eff680bc5b4ea25662885790
 EBUILD gentoo-vdr-scripts-2.0.0.ebuild 3652 SHA256 62b52927e9a537b69e7838569c804f312482959014012dddb0f8b30d9da2cd0f SHA512 9dc070c627fc35e285f753521f2928e2c49f6fa5e6afc8381c51abb62382297eba6379b77f0209fbd9b693954f4001089968b90d06b0695a54ba423233097a9c WHIRLPOOL 03fc204c7c5f70dd33ec4d6e0769b9c0cc98e290a2c2ec1146ee93e8bb497cf31a4b3ff8117355df908b89b4ef1478f6614695a6d8d87149a854b6b14d654ffd
 EBUILD gentoo-vdr-scripts-2.5.ebuild 3840 SHA256 80688c8701a9b362c2090770794f77a0d1877e1041d2ab2d204a7236a8f355bb SHA512 1bfcf931861fdf9e815749eaa0958960320ad1fcc4581cd115b7c2dc550992ccac843f1307d02e39c56b738e13fb3c650e212e9af1e721fdca59cbcb1902c267 WHIRLPOOL 76e7225deeb62fd1d104dd8e8e657346e77f367bdbf89dbe22f94ee012cae2be2877bc26c648456a52b8efd4d8002d106e9173ff0add2b751b9991260a837c65
 EBUILD gentoo-vdr-scripts-2.7.2.ebuild 3779 SHA256 ec5a6db6fb7211593cbd2d6f5efd1802871254c040dbc3020f38f9beba8dcde8 SHA512 38b8283ba64ab451522914b7bf392e0c0c98c51c2b737935e4c5a143de4e8383976b22ebc61dac16442f75965584c4b5cb30bc70431266ec8a51a6e40c6a4c2a WHIRLPOOL 8c1bec4531f5377af5cc95f06bc40b557bb60aee6bce8bd56e6cdfe8a9f366908a130d225ce9701673856a19cf4014a57df1f2e48ba3273b5c9298242199fea7
+EBUILD gentoo-vdr-scripts-2.7.3.ebuild 3779 SHA256 718b96b0d4facb364637339ea345dde58d4cba6295725cf0359339bc7617abfc SHA512 d941f182d0c66ab3ec934177de7a9ed3d404ac4851adfe47875c7b4a1d406b36dd9e55dde235deeae12b105eeb0ae7aaf337f8c6da870d2daa9a26ecf3bbab50 WHIRLPOOL b3d0cbe68149982494664a25f27b84b3b29fe4abca99e2bf17b3b6cebd996d5d3320e7a501449050fb6298f28099dcdcb8b2a6acf289355e4492b8bf2b32791e
 EBUILD gentoo-vdr-scripts-2.7.ebuild 3775 SHA256 848a31d381f15ec679da2b18b0ef193ca8d7555bf2af078d79c00970e3846cd6 SHA512 fcfcfbd96f380ca89822f9cc2fe8b8d577822d6f244e704840f71d909a14d9a667048629f7861eff5b6d8f67f118aea7cd72b96ee7db9fa080d2b95087ede7cc WHIRLPOOL 0bf10e23fa078aabb13a175eb91c56731e53dfc12f57727d6996a84801288b852107fab66f200cf18c4a3f670981f1ba5ef0cb469bb7b5e8419cfe808f0153ce
-MISC ChangeLog 27619 SHA256 61bed66cf924817975c8a98d667010489a842a60d76e2f606c5b4d68a5cf7a71 SHA512 9506313cc4605338c4852958eb8e3ccb01c1030ddf86d64b4cc88c0196efe6fb1476936df43cd7e36efe3233cbe4e988e41a3f94a0e2d148f8d2004db2d55410 WHIRLPOOL 3ee22653513b580292c7e252e3927c83fa1e38771081006237138340e105c00eb71c709c64244fd0578f26a9fb1ee1a6783f2a125a52d4922ec64d9199d82493
+MISC ChangeLog 27808 SHA256 1afba39ad2812bc9e2dcec14d8b9e12c6f523cc93f4f8a56c22dcd828fb9bdbf SHA512 81092efbe1abeda6a7cf87e66e19c43339ccf40024e598c1047572d383ef177e7bb3ae1601777f1a5d8db8feacb4f61408a3f38ca81dcca39a5423e52de23b66 WHIRLPOOL 877a9b8d49afe8bf9cf3339fbc9ac037619c06a977bbd327882d7b241b8f2d683d5030b5581f7ab55f1633fb20bb6447589d6fb645f302fb68876592efe72a96
 MISC metadata.xml 366 SHA256 a92d2326d3f734f176d63173dd3a19fa2cd3b9744ee142cd3e4fb0771d08fd29 SHA512 f292ea44800b14564b12cf4f12be80fb822e69586e6ef6e8d4f57aa9bc52c59b57ec85b1bad329b27ac628c186255aa4121250d0026cecaadf7fb2c726951956 WHIRLPOOL 429e33decc3b1c25dae8ba99449f0b40246780649a53038b363505c7db7db25aa0c646a6d5e785556d977d88591488d1a2aca25fb2f26cdb65ea8d8f3a344340
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 Comment: added by hd_brummy@gentoo.org
 
-iD8DBQFVGU50dn07HTTCgIoRCP43AJ95RfmdIO0fV70TII2I676zdc7ZwQCeL/BU
-5D73QfjZ1mKrMw0+cKnAvH4=
-=Obhy
+iD8DBQFVTLZQdn07HTTCgIoRCGByAJ434isq96XA6Z2j94oGHv6YRUJAjgCdEN1P
+UXibT7gArMofBFj9k4aXwCs=
+=ZtYC
 -----END PGP SIGNATURE-----
