@@ -1,0 +1,12 @@
+DEFINED_PHASES=config install postinst preinst prepare setup
+DESCRIPTION=Scripts necessary for use of vdr as a set-top-box
+EAPI=5
+HOMEPAGE=http://www.gentoo.org/
+IUSE=nvram
+KEYWORDS=~amd64 ~arm ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=nvram? ( sys-power/nvram-wakeup ) app-admin/sudo sys-process/wait_on_pid
+SLOT=0
+SRC_URI=mirror://gentoo/gentoo-vdr-scripts-2.7.3.tar.bz2 http://dev.gentoo.org/~hd_brummy/distfiles/gentoo-vdr-scripts-2.7.3.tar.bz2
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=794878be7b69530088ae01091f1fc899
