@@ -1,6 +1,12 @@
 # ChangeLog for media-tv/gentoo-vdr-scripts
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.139 2015/03/30 13:23:58 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.140 2015/05/08 13:12:43 hd_brummy Exp $
+
+*gentoo-vdr-scripts-2.7.3 (08 May 2015)
+
+  08 May 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
+  +gentoo-vdr-scripts-2.7.3.ebuild:
+  bump; whitespace; fix POSIX compliant, wrt bug 548550
 
   30 Mar 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
   -gentoo-vdr-scripts-2.6.ebuild, gentoo-vdr-scripts-2.7.ebuild,
